# informationkruncher

./: .gitignore  Build.ksh  README.md  TestData.ksh  build  go  stop
include/: DataBase.h  DirTools.h  User.h  hyper.h  hyperbase.h  infosock.h  infossock.h  infotools.h  login.h  oformat.h  processtools.h  shmemtools.h  tools.h
source/: CMakeLists.txt  Ipv4Caller.h  infokruncher.cpp  makefile
src/: CMakeLists.txt  DataBase.h  exexml  hyper.h  hyperbase.h  infokruncher.cpp  infosock.h  infossock.h  makefile  processtools.h  spinlock.h  tools.h
src/db/: CMakeLists.txt  Data.cpp  DataKruncher.cpp  DataKruncher.h  DataTools.cpp  Database.h  IpRegistry.cpp  IpRegistry.h  dataset.h  dbtests.cpp  ut.cpp
src/db/include/: DataKruncher.h  DataTools.h  DbCursor.h  IpRegistry.h  dataset.h
text/: .gitignore
text/Example/: Left.xml  git.xml  index.html  index.xml
text/Example/Steel/Logo/Blends/: WebKruncher.blend  WebKruncherEntry.blend  WebKruncherEntryWspindleblend.blend
text/Example/Steel/particles/: madcursor.php
text/Example/ajax/: Animator.js  Breadcrumbs.js  Bugger.js  Collisions.js  Everything.js  Lemming.js  Menu.WebKruncher.js  Menu.js  MenuCore.js  Mood.js  Motivator.js  PageMessenger.js  Particle.js  Plotter.js  Signals.js  Texture.js  Tools.js  WinMover.js  actionpost.js  ajax.js  mousetrails.js
text/Example/graphics/Logo/Blends/: WebKruncherEntryBloat.blend  WebKruncherHooked.blend
